[package]
name = "Bassetto"
version = "0.3.8"
edition = "2018"
authors = ["Emanuel Schmid-Siegert <essiegert@jsrlifesciences.com>"]
description   = """
# Basic Sequence Tools
  ---   --       --

A tool and libraries to perform performant sequencing file manipulations \n
- conversion\n
- subsetting\n
- format verification/correction\n
- stats\n

"""
publish = ["ngs_ai"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
bio = "1.1.0"
custom_error = "1.9.2"
rust-htslib = { version = "0.38.2", default-features = false }
regex = "1.5.4"
rustc-hash = { version = "1.0", default-features = true }
niffler = { version = "2.5.0", default-features = true }
log = "0.4"
env_logger = "0.10.0"
itertools ="0.10.5"
tempfile = "3.3.0"


[[bin]]
name = "basseto"
path="src/main.rs"



[lib]
name = "delta_biomed_seq"
path = "src/lib.rs"

